api/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-tracker-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: student-tracker-api
  template:
    metadata:
      labels:
        app: student-tracker-api
    spec:
      containers:
      - name: student-tracker-api
        image: timsmans/student-tracking-api:latest 
        ports:
        - containerPort: 80
