api/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-tracker-api
spec:
  type: ClusterIP
  selector:
    app: student-tracker-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
