api/k8s/api-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: student-tracker-vs
spec:
  hosts:
  - "*"
  gateways:
  - student-tracker-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: student-tracker-api
        port:
          number: 80
